--- a/Stock Analysis.ipynb
+++ b/Stock Analysis.ipynb
@@ -2,13 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [],
    "source": [
     "from pandas_datareader import data\n",
     "import datetime\n",
     "from bokeh.plotting import figure, show, output_file\n",
+    "from bokeh.embed import components\n",
+    "from bokeh.resources import CDN\n",
     "\n",
     "startTime = datetime.datetime(2020, 1, 25)\n",
     "endTime = datetime.datetime(2020, 7, 7)\n",
@@ -42,10 +44,68 @@
     "p.rect(df.index[df.Status == \"Decrease\"], df.Middle[df.Status == \"Decrease\"], msDay, \n",
     "        df.Height[df.Status == \"Decrease\"], fill_color = \"#DC143C\", line_color = \"black\")\n",
     "\n",
+    "script1, div1 = components(p)\n",
+    "cdn_js = CDN.js_files\n",
     "\n",
-    "output_file(\"CS.html\")\n",
-    "show(p)"
+    "#output_file(\"CS.html\")\n",
+    "#show(p)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 90,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "str"
+      ]
+     },
+     "execution_count": 90,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 94,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'https://cdn.bokeh.org/bokeh/release/bokeh-2.1.1.min.js'"
+      ]
+     },
+     "execution_count": 94,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cdn_js[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 97,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[]"
+      ]
+     },
+     "execution_count": 97,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
   },
   {
    "cell_type": "code",
